# jongminchung

./: .editorconfig  .gitignore  .npmrc  .oxfmtrc.mjs  .oxlintrc.json  README.md  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.base.json  tsconfig.json  tsconfig.package-aliases.json  vitest.config.ts
.codex/prompts/: draftpr.md
.github/workflows/: git-client.yml  publish-packages.yml  waka.yml
apps/docs/: mdx-components.tsx  next.config.mjs  package.json  playwright.config.ts  tsconfig.json
apps/git-client/: CONTRIBUTING.md  README.md  components.json  forge.config.ts  index.html  package.json  playwright.config.ts  playwright.electron.config.ts  tsconfig.electron.json  tsconfig.json  vite.config.ts  vite.main.config.ts  vite.preload.config.test.ts  vite.preload.config.ts  vite.terminal.config.ts  vite.utility.config.ts
apps/git-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/git-client/src-tauri/capabilities/: default.json
apps/git-client/src-tauri/src/: changelist.rs  conflict.rs  error.rs  file_content.rs  git.rs  lib.rs  main.rs  management.rs  model.rs  multi_root.rs  recovery.rs  sequence_editor.rs  shelf.rs  terminal.rs
apps/immersive-translate/: package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  wxt.config.ts
apps/readme/: components.json  next.config.mjs  package.json  playwright.config.ts  tsconfig.json
docs/handbook/: 협업.md
homebrew/: Brewfile  readme.md
plugins/go-lsp/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
(+761 files in other folders)
