[package]
name = "git-client"
version = "0.1.0"
description = "A lightweight IntelliJ-style Git client"
authors = ["Jongmin Chung"]
edition = "2024"
license = "MIT"

[lib]
name = "git_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
notify-debouncer-mini = "0.7.0"
portable-pty = "0.9.0"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-store = "2.4.3"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-util = "0.7.18"
ts-rs = { version = "12.0.1", features = ["serde-compat", "uuid-impl"] }
uuid = { version = "1.24.0", features = ["serde", "v4", "v5"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.183"

[dev-dependencies]
tempfile = "3.23"
